Add message that appears while connecting to server (since Heroku takes time to start free apps after sleeping)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <div id="sidebar">
       </div>
       <div id="dialog">
+        <div id="connect"><label>Connecting...</label></div>
       </div>
     </div>
     <a class="about" href="about.html">about</a>
